k8s/front-ops/ingress/front-ops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ops-ingress
  namespace: front-ops
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:061051215363:certificate/f312e54a-b434-493f-ab3a-a78633df5c79"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: kimjichang.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-ops-svc
            port:
              number: 80
